force-app/main/default/objects/Contact/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <inlineHelpText>Default Card or Bank Token</inlineHelpText>
    <label>Default Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>