force-app/main/default/objects/Contact/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Number__c</fullName>
    <label>License Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>