force-app/main/default/objects/Contact/fields/Payment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Time__c</fullName>
    <label>Payment Date Time</label>
    <type>DateTime</type>
</CustomField>