force-app/main/default/objects/Contact/fields/Registration_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Registration_Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Order Created</label>
    <type>Checkbox</type>
</CustomField>