force-app/main/default/objects/Contact/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No Vendors Found</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <infoMessage>Search for Referred by Vendor</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>