force-app/main/default/objects/Contact/fields/StripeCustomerId__c.field-meta.xml
<CustomField>
    <fullName>StripeCustomerId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>StripeCustomerId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>