force-app/main/default/objects/Contact/fields/SYS_Child_Key__c.field-meta.xml
<CustomField>
    <fullName>SYS_Child_Key__c</fullName>
    <externalId>true</externalId>
    <label>SYS_Child_Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>