force-app/main/default/objects/Contact/recordTypes/Manager.recordType-meta.xml
<RecordType>
    <fullName>Manager</fullName>
    <active>true</active>
    <description>Portal Users</description>
    <label>Manager</label>
</RecordType>