force-app/main/default/objects/Contact/listViews/All_PMA_Managers.listView-meta.xml
<ListView>
    <fullName>All_PMA_Managers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone_Number__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Active__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Manager</value>
    </filters>
    <label>All PMA Managers</label>
</ListView>