force-app/main/default/objects/Contact/listViews/All_PMA_Users.listView-meta.xml
<ListView>
    <fullName>All_PMA_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone_Number__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>StripeCustomerId__c</columns>
    <columns>Active__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All PMA Users</label>
</ListView>