force-app/main/default/objects/Contact/listViews/AllCustomers.listView-meta.xml
<ListView>
    <fullName>AllCustomers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone_Number__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>StripeCustomerId__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers</label>
</ListView>